--- a/app/source/scripts/index.html
+++ b/app/source/scripts/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="css/bootstrap.css" title="dark">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	</head>
-	<body style="font-family: Hasklig;">
+	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default;">
 		<div class="container" align="center">
 			<br><br><br><br><br><br><br><br><br><br>
 			<h1 id="title" style="font-family: Hasklig; font-size: 80px; opacity: 0.0;">「Blockade」</h1><br><br>
