--- a/app/source/scripts/menu.html
+++ b/app/source/scripts/menu.html
@@ -6,6 +6,9 @@
 		<link rel="stylesheet" href="css/bootstrap.css" title="dark">
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 		<style>
+			.btn:focus {
+				outline: none !important;
+			}
 			span.label {
 				padding-top: 3.375px;
 			}
@@ -14,31 +17,33 @@
 			}
 		</style>
 	</head>
-	<body style="font-family: Hasklig;">
+	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default;">
 		<div class="container" align="center">
 			<br>
 			<h1 style="font-family: Hasklig; font-size: 80px;">「Blockade」</h1><br><br>
 			<div style="width: 300px">
 				<a href="levelselect.html" id="play" class="btn btn-default btn-lg btn-block">Play</a><br>
 				<a href="editor.html?play=0" id="editor" class="btn btn-default btn-lg btn-block">Editor</a><br>
-				<a href="#" id="about" class="btn btn-default btn-lg btn-block modal-button" data-toggle="modal" data-target="#aboutModel">About</a><br>
+				<!--a href="#" id="about" class="btn btn-default btn-lg btn-block modal-button" data-toggle="modal" data-target="#about-modal">About</a><br-->
+				<a href="#" id="about" class="btn btn-default btn-lg btn-block">About</a><br>
 				<a href="#" id="quit" class="btn btn-default btn-lg btn-block">Quit</a>
 			</div>
 		</div>
 		<span class="label label-default" style="position: absolute; left: 2px; bottom: 2px;"><span style="font-family: Verdana">©</span> Cooper Anderson 2016</span>
 		<span id="version" class="label" style="position: absolute; right: 2px; bottom: 2px;"></span>
-		<div id="aboutModel" class="modal fade" role="dialog">
+		<div id="about-modal" class="modal fade" role="dialog">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<button type="button" class="btn close" data-dismiss="modal" aria-hidden="true">&times;</button>
 						<h4 class="modal-title">About</h4>
 					</div>
-					<div class="modal-body">
+					<div class="modal-body" style="-webkit-user-select: auto; cursor: auto;">
 						<p>Blockade is a minimal grid-based puzzle game that is inspired by the ice puzzles in The Legend of Zelda: Twilight Princess.</p>
 						<p>Programming:</p>
 						<ul>
 							<li>Cooper Anderson</li>
+							<li>Grady Shoemaker</li>
 						</ul>
 						<p>Level Design:</p>
 						<ul>
@@ -64,11 +69,25 @@
 	<script>
 		const remote = require("electron").remote
 		const fs = remote.require("fs")
+
+		$(".btn").attr("draggable", "false");
+
+		$(".btn").on("mouseup mouseleave", function() {
+			$(this).blur();
+		});
+		$("#about").on("click", function() {
+			$("#about-modal").modal("show");
+		});
 		$("#quit").on("click", function(event) {
 			event.preventDefault()
 			remote.app.quit()
 		});
-		////////
+		$(document).on("keydown", function(event) {
+			if (event.key == '|') {
+				location = "testing.html";
+			}
+		});
+
 		data = JSON.parse(fs.readFileSync(`${__dirname}/../../package.json`,'utf8'))
 		if (data.release == "indev") {
 			$("#version").addClass("label-danger").addClass("label-purple");
@@ -82,12 +101,5 @@
 			$("#version").addClass("label-primary");
 		}
 		$("#version").html(data.release + " " + data.version)
-
-		$(document).on("keydown", function(event) {
-			if (event.key == '|') {
-				location = "testing.html";
-			}
-		});
-		////////
 	</script>
 </html>
