--- a/app/source/scripts/menu.html
+++ b/app/source/scripts/menu.html
@@ -9,6 +9,9 @@
 			.btn:focus {
 				outline: none !important;
 			}
+			.modal-title {
+				font-family: inherit;
+			}
 			span.label {
 				padding-top: 3.375px;
 			}
