--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -6,6 +6,14 @@
 		<link rel="stylesheet" href="css/bootstrap.css" title="dark">
 		<link rel="stylesheet" href="css/blockade.css">
 		<link rel="stylesheet" href="../resources/themes/default.css">
+		<style>
+			.btn:focus {
+				outline: none !important;
+			}
+			.modal-title {
+				font-family: inherit;
+			}
+		</style>
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	</head>
 	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default;">
@@ -70,6 +78,12 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="js/play.js"></script>
 	<script>
+		$(".btn").attr("draggable", "false");
+
+		$(".btn").on("mouseup mouseleave", function() {
+			$(this).blur();
+		});
+
 		var infoOpen = true;
 		$("#menu").css({left: `${54 - $("#menu").width()}px`});
 		setTimeout(function() {$("#menu").css({left: `${54 - $("#menu").width()}px`});}, 0);
