--- a/app/source/scripts/menu.html
+++ b/app/source/scripts/menu.html
@@ -18,13 +18,18 @@
 			.label-purple {
 				background-color: #9C27B0;
 			}
+			.centered {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				transform: translate(-50%, -50%);
+			}
 		</style>
 	</head>
 	<body style="font-family: Hasklig; -webkit-user-select: none; cursor: default;">
-		<div class="container" align="center">
-			<br>
-			<h1 style="font-family: Hasklig; font-size: 80px;">「Blockade」</h1><br><br>
-			<div style="width: 300px">
+		<div class="container centered" align="center">
+			<h1 style="font-family: Hasklig; font-size: 80px; margin-top: 0px; margin-bottom: 0px;">「Blockade」</h1><br><br>
+			<div style="width: 300px; margin-bottom: 12px;">
 				<a href="levelselect.html" id="play" class="btn btn-default btn-lg btn-block">Play</a><br>
 				<a href="editor.html?play=0" id="editor" class="btn btn-default btn-lg btn-block">Editor</a><br>
 				<!--a href="#" id="about" class="btn btn-default btn-lg btn-block modal-button" data-toggle="modal" data-target="#about-modal">About</a><br-->
@@ -32,7 +37,7 @@
 				<a href="#" id="quit" class="btn btn-default btn-lg btn-block">Quit</a>
 			</div>
 		</div>
-		<span class="label label-default" style="position: absolute; left: 2px; bottom: 2px;"><span style="font-family: Verdana">©</span> Cooper Anderson 2016</span>
+		<!--span class="label label-default" style="position: absolute; left: 2px; bottom: 2px;"><span style="font-family: Verdana">©</span> Cooper Anderson 2016</span-->
 		<span id="version" class="label" style="position: absolute; right: 2px; bottom: 2px;"></span>
 		<div id="about-modal" class="modal fade" role="dialog">
 			<div class="modal-dialog">
