--- a/app/source/scripts/levelselect.html
+++ b/app/source/scripts/levelselect.html
@@ -70,7 +70,7 @@
 	<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	<script>
 		const fs = require("fs");
-		const {retrieve, readJSON} = require("./js/tools");
+		const {readJSON, retrieve} = require("./js/tools");
 
 		levels = {};
 		fs.readdirSync(`${__dirname}/../default-levels/`).filter(function(levelName) {
