--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -13,6 +13,81 @@
 			.modal-title {
 				font-family: inherit;
 			}
+			.btn-quality {
+				padding: 8px 10px 2px 12px;
+			}
+			.btn-difficulty {
+				padding: 8px 12px 2px 10px;
+			}
+			.btn-green {
+				background-color: #388e3c;
+				border-color: #388e3c;
+			}
+			.btn-green:hover, .btn-green:active {
+				background-color: #2d7130 !important; /* -8 */
+				border-color: #2a6a2d; /* -10 */
+			}
+			.btn-green:hover:active {
+				background-color: #235826 !important; /* -15 */
+				border-color: #143316 !important; /* -25 */
+			}
+			.btn-lime {
+				background-color: #afb42b;
+				border-color: #afb42b;
+			}
+			.btn-lime:hover, .btn-lime:active {
+				background-color: #909424 !important; /* -8 */
+				border-color: #888c22; /* -10 */
+			}
+			.btn-lime:hover:active {
+				background-color: #74771d !important; /* -15 */
+				border-color: #4c4e13 !important; /* -25 */
+			}
+			.btn-yellow {
+				background-color: #fbc02d;
+				border-color: #fbc02d;
+			}
+			.btn-yellow:hover, .btn-yellow:active {
+				background-color: #f0ad05 !important; /* -10 */
+				border-color: #e6a605; /* -12 */
+			}
+			.btn-yellow:hover:active {
+				background-color: #be8904 !important; /* -20 */
+				border-color: #8c6503 !important; /* -30 */
+			}
+			.btn-orange {
+				background-color: #f57c00;
+				border-color: #f57c00;
+			}
+			.btn-orange:hover, .btn-orange:active {
+				background-color: #cc6600 !important; /* -8 */
+				border-color: #c26100; /* -10 */
+			}
+			.btn-orange:hover:active {
+				background-color: #a85400 !important; /* -15 */
+				border-color: #753b00 !important; /* -25 */
+			}
+			.btn-red {
+				background-color: #e53935;
+				border-color: #e53935;
+			}
+			.btn-red:hover, .btn-red:active {
+				background-color: #cb1d1a !important; /* -10 */
+				border-color: #c21c19; /* -12 */
+			}
+			.btn-red:hover:active {
+				background-color: #9e1715 !important; /* -20 */
+				border-color: #71100f !important; /* -30 */
+			}
+			.icon-wrapper {
+				font-size: 29px;
+			}
+			.tooltip-inner {
+				font-size: 16px;
+			}
+			h1, h2, h3, h4, h5, h6 {
+				font-family: "Hasklig";
+			}
 		</style>
 		<script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 	</head>
@@ -67,6 +142,46 @@
 						<span>Distance: <span id="win-distance">0</span></span>
 					</div>
 					<div class="modal-footer">
+						<div style="text-align: center;">
+							<div id="quality" class="btn-group" role="group">
+								<span><button id="quality-0" class="btn btn-default btn-quality" data-toggle="tooltip" title="Terrible">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-star"></span></span>
+								</button></span>
+								<span><button id="quality-1" class="btn btn-default btn-quality" data-toggle="tooltip" title="Poor">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-star"></span></span>
+								</button></span>
+								<span><button id="quality-2" class="btn btn-default btn-quality" data-toggle="tooltip" title="Average">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-star"></span></span>
+								</button></span>
+								<span><button id="quality-3" class="btn btn-default btn-quality" data-toggle="tooltip" title="Good">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-star"></span></span>
+								</button></span>
+								<span><button id="quality-4" class="btn btn-default btn-quality" data-toggle="tooltip" title="Excellent">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-star"></span></span>
+								</button></span>
+							</div>
+							<br><br>
+							<div id="difficulty" class="btn-group" role="group">
+								<span><button id="difficulty-0" class="btn btn-default btn-difficulty" data-toggle="tooltip" title="Effortless">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-fire"></span></span>
+								</button></span>
+								<span><button id="difficulty-1" class="btn btn-default btn-difficulty" data-toggle="tooltip" title="Easy">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-fire"></span></span>
+								</button></span>
+								<span><button id="difficulty-2" class="btn btn-default btn-difficulty" data-toggle="tooltip" title="Medium">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-fire"></span></span>
+								</button></span>
+								<span><button id="difficulty-3" class="btn btn-default btn-difficulty" data-toggle="tooltip" title="Hard">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-fire"></span></span>
+								</button></span>
+								<span><button id="difficulty-4" class="btn btn-default btn-difficulty" data-toggle="tooltip" title="Insane">
+									<span class="icon-wrapper"><span class="glyphicon glyphicon-fire"></span></span>
+								</button></span>
+							</div>
+							<br>
+						</div>
+					</div>
+					<div class="modal-footer">
 						<button type="button" class="btn btn-default" id="levelSelect">Level Select</button>
 						<button href="menu.html" type="button" class="btn btn-primary" data-dismiss="modal" id="continue">Continue</button>
 					</div>
@@ -78,6 +193,8 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="js/play.js"></script>
 	<script>
+		$('[data-toggle="tooltip"]').tooltip();
+
 		$(".btn").attr("draggable", "false");
 
 		$(".btn").on("mouseup mouseleave", function() {
@@ -106,6 +223,51 @@
 				setTimeout(function() {$("#infoArrow").html('»')}, 100);
 				$("#info").stop().animate({right: "0px"}, 200);
 			}
+		});
+
+		const colors = ["green", "lime", "yellow", "orange", "red"];
+		function clear(group) {
+			group.removeClass("btn-green");
+			group.removeClass("btn-lime");
+			group.removeClass("btn-yellow");
+			group.removeClass("btn-orange");
+			group.removeClass("btn-red");
+		}
+		function showQuality(rating) {
+			clear($(".btn-quality"));
+			if (rating != undefined) {
+				for (let i = 0; i <= rating; i++) {
+					$("#quality-" + i).addClass("btn-" + colors[colors.length +~ rating]);
+				}
+			}
+		}
+		function showDifficulty(rating) {
+			clear($(".btn-difficulty"));
+			if (rating != undefined) {
+				for (let i = 0; i <= rating; i++) {
+					$("#difficulty-" + i).addClass("btn-" + colors[rating]);
+				}
+			}
+		}
+		let quality = undefined;
+		let difficulty = undefined;
+		$(".btn-quality").on("mouseenter", function(event) {
+			showQuality(Number(event.currentTarget.id.replace(/\D/g, '')));
+		});
+		$(".btn-quality").on("click", function(event) {
+			quality = Number(event.currentTarget.id.replace(/\D/g, ''));
+		});
+		$("#quality").on("mouseleave", function() {
+			showQuality(quality);
+		});
+		$(".btn-difficulty").on("mouseenter", function(event) {
+			showDifficulty(Number(event.currentTarget.id.replace(/\D/g, '')));
+		});
+		$(".btn-difficulty").on("click", function(event) {
+			difficulty = Number(event.currentTarget.id.replace(/\D/g, ''));
+		});
+		$("#difficulty").on("mouseleave", function() {
+			showDifficulty(difficulty);
 		});
 		init();
 	</script>
