--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -82,8 +82,9 @@
 			.icon-wrapper {
 				font-size: 29px;
 			}
-			.tooltip-inner {
-				font-size: 16px;
+			.tooltip {
+				font-family: "Hasklig";
+				font-size: 14px;
 			}
 			h1, h2, h3, h4, h5, h6 {
 				font-family: "Hasklig";
