--- a/app/source/scripts/menu.html
+++ b/app/source/scripts/menu.html
@@ -43,7 +43,7 @@
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
-						<button type="button" class="btn close" data-dismiss="modal" aria-hidden="true">&times;</button>
+						<button type="button" class="btn close" data-dismiss="modal">&times;</button>
 						<h4 class="modal-title">About</h4>
 					</div>
 					<div class="modal-body" style="-webkit-user-select: auto; cursor: auto;">
