--- a/app/source/scripts/play.html
+++ b/app/source/scripts/play.html
@@ -10,6 +10,9 @@
 			.btn:focus {
 				outline: none !important;
 			}
+			[disabled] {
+				pointer-events: none;
+			}
 			.modal-title {
 				font-family: inherit;
 			}
@@ -141,7 +144,7 @@
 						<span>Moves: <span id="win-player-moves">0</span> <span id="win-creator-moves" class="text-muted"></span></span><br>
 						<span>Distance: <span id="win-player-distance">0</span> <span id="win-creator-distance" class="text-muted"></span></span>
 					</div>
-					<div class="modal-footer">
+					<div id="ratings" class="modal-footer hidden">
 						<div style="text-align: center;">
 							<div id="quality" class="btn-group" role="group">
 								<span><button id="quality-0" class="btn btn-default btn-quality" data-toggle="tooltip" title="Terrible">
@@ -182,9 +185,9 @@
 						</div>
 					</div>
 					<div class="modal-footer">
-						<button type="button" class="btn btn-default restart">Replay</button>
-						<button type="button" class="btn btn-default exit">Level Select</button>
-						<button type="button" class="btn btn-primary continue" data-dismiss="modal">Continue</button>
+						<a type="button" class="btn btn-default win-button restart">Replay</a>
+						<a type="button" class="btn btn-default win-button exit">Level Select</a>
+						<a type="button" class="btn btn-primary win-button continue" data-dismiss="modal">Continue</a>
 					</div>
 				</div>
 			</div>
@@ -230,6 +233,9 @@
 		});*/
 
 		const colors = ["green", "lime", "yellow", "orange", "red"];
+		let quality = undefined;
+		let difficulty = undefined;
+
 		function clear(group) {
 			group.removeClass("btn-green");
 			group.removeClass("btn-lime");
@@ -253,13 +259,21 @@
 				}
 			}
 		}
-		let quality = undefined;
-		let difficulty = undefined;
+		function updateRatings() {
+			if (quality != undefined && difficulty != undefined) {
+				$(".win-button").removeClass("disabled");
+			} else {
+				$(".win-button").addClass("disabled");
+			}
+			showQuality(quality);
+			showDifficulty(difficulty);
+		}
 		$(".btn-quality").on("mouseenter", function(event) {
 			showQuality(Number(event.currentTarget.id.replace(/\D/g, '')));
 		});
 		$(".btn-quality").on("click", function(event) {
 			quality = Number(event.currentTarget.id.replace(/\D/g, ''));
+			updateRatings();
 		});
 		$("#quality").on("mouseleave", function() {
 			showQuality(quality);
@@ -269,10 +283,15 @@
 		});
 		$(".btn-difficulty").on("click", function(event) {
 			difficulty = Number(event.currentTarget.id.replace(/\D/g, ''));
+			updateRatings();
 		});
 		$("#difficulty").on("mouseleave", function() {
 			showDifficulty(difficulty);
 		});
+		if (retrieve(readJSON("save-data/preferences/developer.json"), "level-ratings")) {
+			$("#ratings").removeClass("hidden");
+			updateRatings();
+		}
 		init();
 	</script>
 </html>
